<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin">

        <android.support.v7.widget.CardView
            style="@style/OverviewCard"
            android:id="@+id/cvCpu">

            <com.pedja1.fontwidget.widget.FTextView
                style="@style/OverviewCardBackgroundText"
                android:text="@string/cpu"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.pedja1.fontwidget.widget.FTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offline"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:layout_marginRight="35dp"
                        />

                    <com.pedja1.fontwidget.widget.FTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offline"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:gravity="left"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <com.pedja1.fontwidget.widget.FTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offline"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:layout_marginRight="35dp"
                        />

                    <com.pedja1.fontwidget.widget.FTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offline"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:gravity="left"
                        />


                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/OverviewCard"
            android:id="@+id/cvGpu">

            <com.pedja1.fontwidget.widget.FTextView
                style="@style/OverviewCardBackgroundText"
                android:text="@string/gpu"
                />

        </android.support.v7.widget.CardView>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>